--- a/KilooTest/KilooTest.csproj
+++ b/KilooTest/KilooTest.csproj
@@ -227,6 +227,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Agent.cs" />
     <Compile Include="Assets\Scripts\GameWorld.cs" />
+    <Compile Include="Assets\Scripts\ScreenShake.cs" />
     <Compile Include="Assets\Scripts\UiController.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
   </ItemGroup>
